--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .leitura_e_escrita_de_arquivos/arquivos_txt/*
 .idea/workspace.xml
 fundamentos-py/leitura_e_escrita_de_arquivos/arquivos_txt/frutas.txt
+.idea/workspace.xml
